# ups-ml-stroke-prediction

./: .gitignore  Dockerfile  Makefile  README.md  StrokePrediction.ipynb  TP1_Stroke_Prediction_Charbel_Abi_Hana.py  envrionment.yml  pyproject.toml  requirements.txt
